--- a/package.json
+++ b/package.json
@@ -1,16 +1,29 @@
 {
   "name": "static-site",
   "version": "1.0.0",
-  "description": "",
+  "description": "good readme generator",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Joseph Arocha",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.19.0",
+    "axios": "^0.19.2",
     "dotenv": "^8.0.0",
-    "inquirer": "^6.3.1"
-  }
+    "inquirer": "^6.5.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hozerpffp2009/readmeGenerator.git"
+  },
+  "keywords": [
+    "Good",
+    "Readme",
+    "Generator"
+  ],
+  "bugs": {
+    "url": "https://github.com/hozerpffp2009/readmeGenerator/issues"
+  },
+  "homepage": "https://github.com/hozerpffp2009/readmeGenerator#readme"
 }
